Development (#32)
* update setting

* update setting

* update

* update setting

* Static pages (#20)

* update setting

* update setting

* update (#19)


* update setting


* update routes for settings

* update package control (#24)


* update

* update health article

* Dashboard (#29)

* Development (#27)

* update setting

* update setting

* update

* update setting

* Static pages (#20)

* update setting

* update setting

* update (#19)


* update setting


* update routes for settings

* update package control (#24)


* update

* update health article


* Development (#28)

* update setting

* update setting

* update

* update setting

* Static pages (#20)

* update setting

* update setting

* update (#19)


* update setting


* update routes for settings

* update package control (#24)


* update

* update health article


* login fix

* update

* update faq and dashboard api


* update swagger and appoint create

* update appointment crud
